--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <button onclick="fetchTodos()">Fetch To dos</button>
     <button onclick="logTodos()">Log To dos</button>
     <button onclick="populateTodos()">Populate To dos</button>
+   <br>
+   <br>
+    <label for="number-input">Select user ID to filter by:</label>
+    <input type="number" id="number-input"  min="1" max="10">
+    
+    <label for="user-id-log"></label>
+    <input type="submit" id="number-input" value="Submit">
+
+    <br>
+     
+    <input type="submit" value="Clear" id="clear-list" onclick="clearTodos()">
     <ol id="todo-list">
     <!-- LIs will go here -->
     </ol>
