clear button works to clear

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <input type="submit" id="number-input" value="Submit">
 
     <br>
+    <br>
      
-    <input type="submit" value="Clear" id="clear-list" onclick="clearTodos()">
-    <ol id="todo-list">
+    <button onclick="clearToDos()">Clear</button>
+        <ol id="todo-list">
     <!-- LIs will go here -->
     </ol>
 </body>
