--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
    <br>
    <br>
     <label for="number-input">Select user ID to filter by:</label>
-    <input type="number" id="number-input"  min="1" max="10">
+    <input type="number" id="number-input"  min="1" max="10" value="" onkeyup="setValueFilter(this.value)"/>
     
     <label for="user-id-log"></label>
-    <input type="submit" id="number-input" value="Submit">
+    <input type="submit" id="number-input" value="Submit"/>
 
     <br>
     <br>
